file-undo-manager: initialize singleton explicitly

The current implementation leaks the NautilusFileUndoManager instance,
because the code does not unref it anywhere. This commit adds a _new()
function to the undo manager and makes NautilusApplication manage its
lifetime.

https://bugzilla.gnome.org/show_bug.cgi?id=769082